# default_python_cookiecutter

./: README.rst  cookiecutter.json
{{cookiecutter.project}}/: LICENSE  README.rst  pyproject.toml
{{cookiecutter.project}}/src/{{cookiecutter.project}}/: __init__.py
